[tool.poetry]
name = "http_test"
version = "0.1.0"
description = ""
authors = ["yuta-natsume <natsume.yuta@classmethod.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
awscli = "^1.18.120"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
